refactor: Update review controller and utils.js
- Remove unnecessary line in review.controller.js
- Update accepted origins in utils.js based on environment

Recent user commits:
- chore: Add initial configuration files for backend and frontend

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -18,10 +18,10 @@
       <nav class="header__nav">
         <ul class="header__nav-list">
           <li class="header__nav-item">
-            <a href="" class="header__nav-link">Inicio</a>
+            <a href="./" class="header__nav-link">Inicio</a>
           </li>
           <li class="header__nav-item">
-            <a href="" class="header__nav-link">Sobre Nosotros</a>
+            <a href="./#about" class="header__nav-link">Sobre Nosotros</a>
           </li>
 
           <li class="header__nav-item">
